--- a/main.tex
+++ b/main.tex
@@ -28,13 +28,13 @@
 \vspace{20px}
 
 \begin{quote}
-    Write your collaborators' computing ID here:
+    Write your collaborators' computing ID here: qq8jn
 \end{quote}
 
 \vspace{20px}
 
 \begin{quote}
-    Here write the pledge that you did not share any written material electronically or differently:
+    Here write the pledge that you did not share any written material electronically or differently: I did not share any written material electronically or differently
 \end{quote}
 
 \newpage
