--- a/main.tex
+++ b/main.tex
@@ -310,10 +310,10 @@ Suppose we are given $n$ numbers $\vec{a}=(a_1,\dots,a_n)$ as input. As output, 
 % Add your answer for problem 5 here:
 
 \paragraph{}
-Build a max-heap as a max-priority queue with the given elements. Then keep extract the max $m$ elements from the heap.
+Build a min-heap as a min-priority queue with the given elements. Then keep extracting the minimum element from the heap $m$ times. The elements extracted are $(b_1,\dots,b_m)$.
 
 \paragraph{}
-According to the book, the running time of Build-Max-Heap is $O(n)$ and Heap-Extract-Max is $O(\log n)$, so when $m=n/\log n$. Therefore, the algorithm's running time is
+According to the book, the running time of Build-Min-Heap is $O(n)$ and Heap-Extract-Min is $O(\log n)$, so when $m=n/\log n$. Therefore, the algorithm's running time is
 
 $$\begin{aligned}
 O(n)+mO(\log n)&=O(n)+\frac{n}{\log n}O(\log n)\\
