--- a/ps2.tex
+++ b/ps2.tex
@@ -34,7 +34,7 @@
 \vspace{20px}
 
 \begin{quote}
-    Here write the pledge that you did not share any written material electronically or differently: I did not share any written material electronically or differently
+    Here write the pledge that you did not share any written material electronically or differently: I have neither given nor received aid on this assignment.
 \end{quote}
 
 \newpage
